Kubernetes/eks/manual/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uow-cca-groupt
  name: uow-cca-groupt-svc
spec:
  selector:
    app: uow-cca-groupt
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: NodePort
